packages/conduit/src/dsl/snapshots/conduit__dsl__parser__tests__basic_nodes-10.snap
---
source: packages/conduit/src/dsl/parser.rs
expression: "NodeParser :: parse(r#\"anonymous_module { a <- \"string with space\" }\"#)"
---
Ok(
    {
        "[UUID]": NodeInstruct {
            identifier: "[UUID]",
            module: "anonymous_module",
            inputs: {
                "a": String {
                    direction: Input,
                    value: "string with space",
                },
            },
        },
    },
)
