packages/conduit/src/dsl/snapshots/conduit__dsl__parser__tests__basic_nodes-2.snap
---
source: packages/conduit/src/dsl/parser.rs
expression: "NodeParser :: parse(\"anonymous_module {}\")"
---
Ok(
    {
        "[UUID]": NodeInstruct {
            identifier: "[UUID]",
            module: "anonymous_module",
            inputs: {},
        },
    },
)
