packages/conduit/src/dsl/snapshots/conduit__dsl__parser__tests__basic_nodes-4.snap
---
source: packages/conduit/src/dsl/parser.rs
expression: "NodeParser :: parse(\"anonymous_module { a <- false }\")"
---
Ok(
    {
        "[UUID]": NodeInstruct {
            identifier: "[UUID]",
            module: "anonymous_module",
            inputs: {
                "a": Boolean {
                    direction: Input,
                    value: false,
                },
            },
        },
    },
)
