packages/conduit/src/dsl/snapshots/conduit__dsl__parser__tests__duplicated_node_error.snap
---
source: packages/conduit/src/dsl/parser.rs
expression: "NodeParser ::\nparse(r#\"\n                name module_a {}\n                name module_b {}\n            \"#)"
---
Err(
    DuplicatedNode {
        identifier: "name",
    },
)
