packages/conduit/src/dsl/snapshots/conduit__dsl__parser__tests__expression_nested.snap
---
source: packages/conduit/src/dsl/parser.rs
expression: "NodeParser :: parse(\"name module { property <- ((1 + 2) * (3 + 4)) }\")"
---
Ok(
    {
        "name": NodeInstruct {
            identifier: "name",
            module: "module",
            inputs: {
                "property": Expression {
                    direction: Input,
                    value: BinaryOperation {
                        operation: Multiply,
                        left: BinaryOperation {
                            operation: Add,
                            left: Number(
                                "1",
                            ),
                            right: Number(
                                "2",
                            ),
                        },
                        right: BinaryOperation {
                            operation: Add,
                            left: Number(
                                "3",
                            ),
                            right: Number(
                                "4",
                            ),
                        },
                    },
                },
            },
        },
    },
)
