packages/conduit/src/dsl/snapshots/conduit__dsl__parser__tests__shorthand_basic-2.snap
---
source: packages/conduit/src/dsl/parser.rs
expression: "NodeParser :: parse(r#\"name module_a <- \"hello\"\"#)"
---
Ok(
    {
        "name": NodeInstruct {
            identifier: "name",
            module: "module_a",
            inputs: {
                "input": String {
                    direction: Input,
                    value: "hello",
                },
            },
        },
    },
)
