packages/conduit/src/dsl/snapshots/conduit__dsl__parser__tests__shorthand_basic.snap
---
source: packages/conduit/src/dsl/parser.rs
expression: "NodeParser :: parse(r#\"module_a <- \"hello\"\"#)"
---
Ok(
    {
        "[UUID]": NodeInstruct {
            identifier: "[UUID]",
            module: "module_a",
            inputs: {
                "input": String {
                    direction: Input,
                    value: "hello",
                },
            },
        },
    },
)
