packages/conduit/src/dsl/snapshots/conduit__dsl__parser__tests__shorthand_chaining-2.snap
---
source: packages/conduit/src/dsl/parser.rs
expression: "NodeParser :: parse(r#\"name_a module_a <- module_b <- \"hello\"\"#)"
---
Ok(
    {
        "[UUID]": NodeInstruct {
            identifier: "[UUID]",
            module: "module_b",
            inputs: {
                "input": String {
                    direction: Input,
                    value: "hello",
                },
                "output": Relation {
                    identifier: "name_a",
                    direction: Output,
                    property: "input",
                },
            },
        },
        "name_a": NodeInstruct {
            identifier: "name_a",
            module: "module_a",
            inputs: {
                "input": Relation {
                    identifier: "[UUID]",
                    direction: Input,
                    property: "output",
                },
            },
        },
    },
)
