packages/conduit/src/dsl/snapshots/conduit__dsl__parser__tests__shorthand_chaining.snap
---
source: packages/conduit/src/dsl/parser.rs
expression: "NodeParser :: parse(r#\"name_a module_a <- name_b module_b <- \"hello\"\"#)"
---
Ok(
    {
        "name_a": NodeInstruct {
            identifier: "name_a",
            module: "module_a",
            inputs: {
                "input": Relation {
                    identifier: "name_b",
                    direction: Input,
                    property: "output",
                },
            },
        },
        "name_b": NodeInstruct {
            identifier: "name_b",
            module: "module_b",
            inputs: {
                "input": String {
                    direction: Input,
                    value: "hello",
                },
                "output": Relation {
                    identifier: "name_a",
                    direction: Output,
                    property: "input",
                },
            },
        },
    },
)
